# ApiCloudFilleSearchDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/cn/ololee/apicloudfillesearchdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/uzmap/: module.json
app/src/main/assets/widget/: config.xml  index.html
app/src/main/assets/widget/html/: main.html  second.html
app/src/main/java/cn/ololee/apicloudfillesearchdemo/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cn/ololee/apicloudfillesearchdemo/: ExampleUnitTest.java
filesearch/: build.gradle
filesearch/src/androidTest/java/cn/ololee/fileclassifier/: ExampleInstrumentedTest.java
filesearch/src/main/: AndroidManifest.xml
filesearch/src/main/cpp/: CMakeLists.txt
filesearch/src/main/cpp/common/: Common.h
filesearch/src/main/cpp/fileclassifier/: classifier.cpp  classifier.h  classifyType.cpp  classifyType.h  traverseFilesNR.cpp
filesearch/src/main/cpp/trie/: SuffixNode.h  SuffixTrie.cpp  SuffixTrie.h
filesearch/src/main/cpp/utils/: FileUtils.cpp  FileUtils.h  StringUtils.cpp  StringUtils.h
filesearch/src/main/java/cn/ololee/fileclassifier/: DefaultConstants.java  FileClassifierHelper.java  FileInfo.java  FileInfoCallback.java  FileModule.java
filesearch/src/main/java/cn/ololee/fileclassifier/annotation/: StatisticsTypeAnnotation.java
filesearch/src/test/java/cn/ololee/fileclassifier/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
